fix(front): removes duplicate rule and adds `small` element to wrap footer
legal/footer text is sometimes wrapped in the `small` tag, which indicates this is aside text not relevant to the main content of a site. more info here: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/small

--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -91,11 +91,10 @@ body {
   @apply p-6;
   @apply sm:p-8;
   @apply lg:p-14;
-  @apply pb-0;
-  position: relative;
 }
 
 .header {
+  @apply pb-0;
   position: relative;
 }
 
@@ -131,15 +130,6 @@ body {
   @apply pb-16;
   @apply flex-grow;
   @apply justify-center;
-}
-
-.footer {
-  @apply pb-3;
-  @apply flex-col;
-  @apply text-center;
-  @apply opacity-20;
-  @apply mt-auto;
-  @apply text-sm;
 }
 
 .nav-home {
